@@ -4604,3 +4604,5 @@
          finalise recordings (part of bug #305) (Sergio).
 20140123 rzx.c: reset the autosave frame count on rollback to fix the prune
          function. Fix some warnings about unused parameters (Sergio).
+20140123 peripherals/disk/disk.c: fix loading of EDSK files with Sector Offset
+         block (fixes bug #307) (Sergio).
